--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,24 +12,15 @@ on:
       - '**'
 
 #on:
-#  push:
-#    branches:
-#      - master
-#  pull_request:
-#    branches:
-#      - master
+#  workflow_run:
+#    workflows: ["Test"]
+#    branches: [master]
+#    types:
+#      - completed
 
 jobs:
-  # we recommend running a smoke test on template generation
-  # please uncomment below test step and "needs" property in release step when you do
-  #test:
-  #  name: Smoketest test-tf-generation
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - uses: actions/checkout@v2
-  #    - run: ansible-playbook ./__tests__/test-tf-generation.yml
   release:
-  #  needs: test
+    if: github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
     env:
       GIT_AUTHOR_EMAIL: 64205253+stackhead-bot@users.noreply.github.com
