--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,8 @@ env:
   ROLE_NAME: <vendor>.stackhead_<type>_<name>
   # todo: software to use as webserver
   WEBSERVER: getstackhead.stackhead_webserver_nginx # if your module is a webserver module, set its name here
+  # todo: software to use as container provider
+  CONTAINER: getstackhead.stackhead_container_docker # if your module is a container module, set its name here
   # todo: adjust domain name
   DOMAIN_NAME: "pr-${{ github.run_id }}-myname"
   # domain name
@@ -105,8 +107,9 @@ jobs:
         ipaddress: ${{ steps.setup_server.outputs.hcloud_server_created_ipv4 }}
         domain: '${{ env.DOMAIN_NAME }}.${{ env.DOMAIN_SUFFIX }}'
         domain2: 'sub.${{ env.DOMAIN_NAME }}.${{ env.DOMAIN_SUFFIX }}'
-          webserver: '${{ env.WEBSERVER }}'
-          rolename: '${{ env.ROLE_NAME }}'
+        webserver: '${{ env.WEBSERVER }}'
+        container: '${{ env.CONTAINER }}'
+        rolename: '${{ env.ROLE_NAME }}'
     - name: Remove DNS record
       uses: saitho/delete-dns-record@saitho-patch-1
       if: always()
