chore: install StackHead from collection

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,8 +47,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install Ansible v2.10 alpha (GH actions currently uses 2.9)
+        run: ANSIBLE_SKIP_CONFLICT_CHECK=1 pip install --user ansible==2.10.0a9 && ansible --version
       - name: Get latest StackHead version
-        run: git clone --depth 1 --branch master https://github.com/getstackhead/stackhead.git stackhead-repo
+        run: ansible-galaxy collection install git+https://github.com/getstackhead/stackhead.git,next -f
       - run: ansible-playbook ./__tests__/test-tf-generation.yml
 
   checkLabel:
@@ -65,6 +67,8 @@ jobs:
     if: github.event.pull_request.draft == false
     steps:
     - uses: actions/checkout@v2
+    - name: Install Ansible v2.10 alpha (GH actions currently uses 2.9)
+      run: ANSIBLE_SKIP_CONFLICT_CHECK=1 pip install --user ansible==2.10.0a9 && ansible --version
     - name: Print Ansible version
       run: ansible --version
     - uses: webfactory/ssh-agent@v0.2.0
@@ -102,7 +106,7 @@ jobs:
         proxied: 0
         token: "${{ secrets.CLOUDFLARE_TOKEN }}"
         zone: "${{ secrets.CLOUDFLARE_ZONE }}"
-    - uses: "getstackhead/stackhead@master"
+    - uses: getstackhead/stackhead@next
       with:
         ipaddress: ${{ steps.setup_server.outputs.hcloud_server_created_ipv4 }}
         domain: '${{ env.DOMAIN_NAME }}.${{ env.DOMAIN_SUFFIX }}'
