--- a/__tests__/test-tf-generation.yml
+++ b/__tests__/test-tf-generation.yml
@@ -1,8 +1,10 @@
 ---
 - hosts: localhost
   connection: local
+  vars:
+    stackhead__roles: "~/.ansible/collections/ansible_collections/getstackhead/stackhead/roles"
   tasks:
-    - include_vars: "../stackhead-repo/ansible/__tests__/variables.yml"
+    - include_vars: "{{ stackhead__roles }}/stackhead_module_api/testdata/variables.yml"
     - block:
         - debug:
             msg: "Run your tests here by importing the respective tasks"
