chore: adjust terraform settings
Adding vendor and version setting, removing url setting

--- a/stackhead-module.yml
+++ b/stackhead-module.yml
@@ -2,5 +2,6 @@
 type: webserver
 #terraform:
 #  provider:
+#    vendor: getstackhead
 #    name: nginx
-#    url: https://github.com/getstackhead/terraform-nginx/releases/download/v1.3.0/terraform-provider-nginx
+#    version: 1.3.2
