--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,9 +73,9 @@ jobs:
         python-version: '3.x'
     - name: Uninstall old Ansible
       run: ansible --version && sudo apt purge ansible -y
-    - name: Install Ansible v2.10 alpha (GH actions currently uses 2.9)
-      run: sudo python -m pip install ansible==2.10.0a9 && ansible --version
-    - uses: webfactory/ssh-agent@v0.2.0
+    - name: Install Ansible v2.10 (GH actions currently uses 2.9)
+      run: sudo python -m pip install ansible==2.10.0 && ansible --version
+    - uses: webfactory/ssh-agent@v0.4.1
       with:
         ssh-private-key: "${{ secrets.SSH_PRIVATE_KEY }}"
     - name: Setup Hetzner server
