chore: add module_role_path sample

--- a/__tests__/test-tf-generation.yml
+++ b/__tests__/test-tf-generation.yml
@@ -11,4 +11,4 @@
         #- name: Generate Server Block Terraform file
         #  import_tasks: "../tasks/steps/generate-serverblock-tf.yml"
       vars:
-        role_path: ".."
+        module_role_path: ".."
