ci: properly setup python3 and Ansible 2.10

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,14 +67,16 @@ jobs:
     if: github.event.pull_request.draft == false
     steps:
     - uses: actions/checkout@v2
+    - name: Remove Python 2 and old Ansible 2.9 version
+      run: sudo apt purge python ansible -y
     - name: Set up Python 3
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - name: Uninstall old Ansible
-      run: ansible --version && sudo apt purge ansible -y
-    - name: Install Ansible v2.10 (GH actions currently uses 2.9)
-      run: sudo python -m pip install ansible==2.10.0 && ansible --version
+    - name: Install Ansible v2.10.3 (GH actions currently uses 2.9)
+      run: pip install ansible==2.10.3
+    - name: Print Ansible and Python version
+      run: ansible --version && python --version
     - uses: webfactory/ssh-agent@v0.4.1
       with:
         ssh-private-key: "${{ secrets.SSH_PRIVATE_KEY }}"
